syntax = "proto3";

option csharp_namespace = "Grpc.Shared";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}

service Math {
	rpc GetFibonacci (FromTo) returns (stream NumericResult);
}

message FromTo {
	int32 from = 1;
	int32 to = 2;
}

message NumericResult {
	int32 result = 1;
}